# mini-cmake-qt

./: .gitignore  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake  Misc.cmake  Warnings.cmake
docs/: CMakeLists.txt  Doxyfile  conf.py
docs/pages/: about.dox
tests/: CMakeLists.txt
